tests/k8s_testcases/network-policy-checks-bad-path/ipblock_cidr_is_none.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ipblock-fields-test-none
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          #none
          cidr:
      ports:
        - port: 53
          protocol: UDP
